<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HelloMetroBike</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="company_logo">HuskySoft</string>
    <string name="largeText">abcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyz</string>
    <string name="bicycleTitle">Bicycle directions from Google</string>
    <string name="transitTitle">Transit directions from Google</string>
    <string name="mapTitle">Sample map</string>

</resources>